@@ -5,6 +5,7 @@ nanoflann 1.1.3: In SVN trunk
   * New method RadiusResultSet::set_radius_and_clear()
   * Avoid potential collision of min/max macros with <windows.h>
   * Removed unneeded #include's of std headers. 
+  * New sample code for vectors of vectors.
 
 nanoflann 1.1.2: Released May 2, 2012
   * Better documentation and added graphs of a benchmarking for helping choosing "leaf_max_size".
